# intent-quality

./: .gitattributes  .gitignore  ACCEPTANCE.md  CONTRIBUTING.md  DIAGNOSE-EVAL-FLOW.md  LICENSE  PRIVACY.md  PRODUCT-SPEC.md  PROJECT-INFO.md  README.md  SCHEMAS.md  SECURITY.md  intent-quality-direction.md  intent-quality-followups.md  pyproject.toml
.codex-plugin/: plugin.json
cases/: case_advice_only_premature_execution_001.yaml  case_auth_boundary_direction_001.yaml  case_context_pollution_001.yaml  case_growth_goal_replaced_by_risk_001.yaml  case_unverified_premise_001.yaml
datasets/: case-to-eval-conversion.v0.1.yaml  collaboration-quality.v0.1.yaml
docs/: launch-copy.md  open-source-foundation-checklist.md  public-sync-contribution-minimal-loop.md  release-v0.2.md  release-v0.3.md  v0.3-planning-brief.md  v0.3-roadmap.md  v0.4-diagnosis-quality.md
docs/playbook/: authorization-boundary.md  context-pollution.md  contribution-privacy.md  diagnose-vs-eval.md  premise-validation.md  public-sample-trust.md  response-mode.md  suggestions-and-confirmation.md
examples/: contribution-invitation.md  diagnose-report.md  diagnose-report.yaml  eval-response-auth-boundary-pass.md  suggestion-display.md
examples/adapter-export-fixtures/: deepeval.yaml  promptfoo.yaml  (+1 more)
intent_quality/: __init__.py  adapter_export.py  check.py  cli.py  contribution.py  diagnose.py  diagnosis_calibration.py  eval.py  paths.py  public_sync.py  render.py  schemas.py  suggestions.py
public-registry/: index.yaml
rubrics/: collaboration-quality.v0.1.yaml
tools/: local_loop_check.py
(+69 files in other folders)
