[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-quality"
version = "0.1.0"
description = "Local-first Agent collaboration quality CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
intent-quality = "intent_quality.cli:main"

[tool.setuptools.packages.find]
include = ["intent_quality*"]
