[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-quality"
version = "0.3.0"
description = "Local-first Agent collaboration quality CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "intent-quality contributors" },
]
keywords = [
  "agents",
  "ai-agents",
  "codex",
  "llm-evaluation",
  "agent-evaluation",
  "intent-diagnosis",
  "prompt-quality",
  "collaboration-quality",
  "local-first",
  "quality-assurance",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
intent-quality = "intent_quality.cli:main"

[tool.setuptools.packages.find]
include = ["intent_quality*"]
